Blockquote style fix and spacing fix

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -134,7 +134,8 @@
   }
   
   p,
-  li {
+  li,
+  blockquote {
     font-size: 1.125em;
     color: var(--body-color);
   }
@@ -260,14 +261,13 @@
   }
   
   main blockquote {
-    margin: 1em 0 0 1em;
+    max-width: var(--reading-max-width);
+    border-left: 8px solid var(--blockquote-border-color);
+    margin: 1.25em 0 0 1em;
     padding: 0.5em 1em;
     font-style: italic;
-    border-left: 5px solid var(--blockquote-border-color);
-  }
-  
-  main blockquote p {
-    margin: 0;
+    line-height: 180%;
+    text-rendering: optimizeLegibility;
   }
   
   main pre code {
